tests/ui/type-alias-impl-trait/nested.stderr
error: item does not constrain `Foo::{opaque#0}`
  --> $DIR/nested.rs:11:4
   |
LL | fn bar() -> Bar {
   |    ^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/nested.rs:3:12
   |
LL | type Foo = impl std::fmt::Debug;
   |            ^^^^^^^^^^^^^^^^^^^^

error[E0277]: `Bar` doesn't implement `Debug`
  --> $DIR/nested.rs:17:22
   |
LL |     println!("{:?}", bar());
   |                      ^^^^^ `Bar` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `Bar`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
